# wesktop

./: .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  README.md  package.json  pyproject.toml  selfdoc.json
.github/workflows/: ci-pypi.yml  ci.yml  publish.yml
.rlsbl/: config.json  hashes.json  managed-files.json
.rlsbl/bases/: .gitignore  CLAUDE.md  LICENSE
.rlsbl/changes/: .validated  0.1.0.jsonl  0.1.0.md  0.1.1.md  0.10.0.md  0.2.0.jsonl  0.2.0.md  0.2.1.jsonl  0.2.1.md  0.3.0.jsonl  0.3.0.md  0.3.1.md  0.3.2.jsonl  0.3.2.md  0.4.0.md  0.4.1.jsonl  0.4.1.md  0.4.2.jsonl  0.4.2.md  (+12 more)
.selfdoc/: manifest.json
.strictcli/: schema.json
docs/: _CLAUDE.md  _README.md  api.md  cli-config.md  cli-diagnose.md  cli-index.md  gen-index.md  index.md  src-wesktop-__main__.md  src-wesktop-asgi.md  src-wesktop-audit.md  src-wesktop-auth.md  src-wesktop-cli.md  src-wesktop-config.md  src-wesktop-desktop.md  src-wesktop-dev.md  src-wesktop-di.md  src-wesktop-entries.md  src-wesktop-error_log.md  src-wesktop-features.md  src-wesktop-logging.md  src-wesktop-mcp.md  src-wesktop-mcp_tools-_http.md  src-wesktop-mcp_tools-_paths.md  src-wesktop-mcp_tools-ask_user.md  src-wesktop-mcp_tools-deployment.md  src-wesktop-mcp_tools-filesystem.md  src-wesktop-mcp_tools-git.md  src-wesktop-mcp_tools-review.md  src-wesktop-mcp_tools-testing.md  src-wesktop-mcp_tools.md  src-wesktop-middleware.md  src-wesktop-runtime_bridge.md  src-wesktop-sdui.md  src-wesktop-server.md  src-wesktop-sse.md  src-wesktop-tasks.md  src-wesktop-testing.md  src-wesktop.md  vs-electron.md  (+2 more)
tests/: conftest.py  test_asgi.py  test_cli.py  test_desktop.py  test_dev.py  test_entries.py  test_followup.py  test_gui_backend.py  test_import.py  test_main.py  test_mcp_roles.py  test_mcp_tools.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_runtime_bridge.py  test_sdui.py  test_server.py  test_sse.py  test_stubs.py
todo/: app-update-cache-and-version-must-be-framework-owned.md  crawl_debug.py  daemon-thread-serve-hangs-in-multithreaded-processes.md  desktop-runtime-wiring-belongs-in-the-framework.md  foreground-false-threading-bug.md  granian-spawn-mode-socket-passing.md  headless-crawl-diagnose.md  platform-vision.md  pywebview-gi-venv-isolation.md  route-metadata-api.md  streamresponse-client-disconnect-detection.md
(+54 files in other folders)
